--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "git-commit-msg-linter": "^3.2.6"
+  },
+  "devDependencies": {
+    "@types/node": "^16.4.0",
+    "typescript": "^4.3.5"
   }
 }
