--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mateogarcialopez/TDD.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "git-commit-msg-linter": "^3.2.6"
+  "bugs": {
+    "url": "https://github.com/mateogarcialopez/TDD/issues"
   },
+  "homepage": "https://github.com/mateogarcialopez/TDD#readme",
   "devDependencies": {
-    "@types/node": "^16.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "typescript": "^4.3.5"
+    "git-commit-msg-linter": "^3.2.6"
   }
 }
