--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "homepage": "https://github.com/mateogarcialopez/TDD#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.2.6"
+    "@types/node": "^16.4.1",
+    "git-commit-msg-linter": "^3.2.6",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
