--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
   },
   "homepage": "https://github.com/mateogarcialopez/TDD#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "eslint": "^7.31.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "git-commit-msg-linter": "^3.2.6",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
