--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,21 +18,6 @@
   },
   "homepage": "https://github.com/mateogarcialopez/TDD#readme",
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "git-commit-msg-linter": "^3.2.6",
-    "husky": "^7.0.1",
-    "lint-staged": "^11.1.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
+    "git-commit-msg-linter": "^3.2.6"
   }
 }
