chore: instalación de typescript

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/mateogarcialopez/TDD#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.2.6"
+    "git-commit-msg-linter": "^3.2.6",
+    "typescript": "^4.3.5"
   }
 }
