--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "lint-staged": {
+    "*ts": [
+      "eslint 'src/**'",
+      "git add"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mateogarcialopez/TDD.git"
@@ -19,6 +25,7 @@
   },
   "homepage": "https://github.com/mateogarcialopez/TDD#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "eslint": "^7.31.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -26,6 +33,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "git-commit-msg-linter": "^3.2.6",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.1.1",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   }
 }
