--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest - --updateSnapshot",
     "start": "node app.js"
   },
   "lint-staged": {
